# dakan-api-graph

./: .gitignore  Dockerfile  README.rst  config-dev-fss.json  config-prod-fss.json  entrypoint.sh  naiserator.yaml  pyproject.toml
.github/workflows/: onPush.yml  onRelease.yml
.nais/: config-dev-fss.json  config-dev-gcp.json  config-prod-fss.json  config-prod-gcp.json  nais.yaml  nais_gcp.yaml
src/: store.py
src/dakan_api_graph/: main.py  store.py
src/dakan_api_graph/log_metrics/: metric_types.py
src/dakan_api_graph/models/: edges.py  requests.py  throughput.py
src/dakan_api_graph/routers/: azure_ad.py  edges.py  health.py  metrics.py  nodes.py
src/dakan_api_graph/utils/: authentication.py  cosmos_connector.py
src/data_catalog_api/: main.py  store.py
src/data_catalog_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data_catalog_api/exceptions/: exceptions.py
src/data_catalog_api/log_metrics/: metric_types.py
src/data_catalog_api/models/: edges.py  nodes.py  requests.py  throughput.py
src/data_catalog_api/routers/: azure_ad.py  edges.py  health.py  metrics.py  nodes.py
src/data_catalog_api/utils/: authentication.py  cosmos_connector.py  logger.py
tests/: test_dakan_api_graph.py  test_data_catalog_api.py
