[tool.poetry]
name = "data-catalog-api"
version = "0.0.1"
description = ""
authors = ["pbencze <paul@idelab.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gremlinpython = "^3.4.6"
tornado = "4.4.1"
fastapi = "^0.52.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = "^0.11.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
