[tool.poetry]
name = "data-catalog-api"
version = "0.0.1"
description = ""
authors = ["pbencze <paul.bencze@nav.no>"]

[tool.poetry.dependencies]
python = "^3.6"
gremlinpython = "^3.4.6"
tornado = "4.4.1"
fastapi = "^0.58.1"
python-dotenv = "^0.13.0"
aiofiles = "^0.5.0"
prometheus_client = "^0.8.0"
starlette-exporter = "^0.3.0"
Authlib = "^0.14.3"
httpx = "^0.13.3"
itsdangerous = "^1.1.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.11.3"
black = "^19.10b0"
pytest = "^5.3.2"
coverage = {extras = ["toml"], version = "^5.0.1"}
pytest-cov = "^2.8.1"
pytest-mock = "^3.1.0"
flake8 = "^3.7.9"
flake8-black = "^0.1.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.2"
flake8-bandit = "^2.1.2"
safety = "^1.8.5"
mypy = "^0.782"
pytype = {version = "^2020.1.8", python = "3.7"}
flake8-annotations = "^2.0.0"
typeguard = "^2.7.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.1.2"
xdoctest = "^0.12.0"
sphinx = "^3.0.3"
sphinx-autodoc-typehints = "^1.10.3"
codecov = "^2.0.15"
desert = "^2020.1.6"
sphinx_autodoc_typehints = "^1.10.3"
sphinx_rtd_theme = "^0.5.0"
docutils = "^0.16"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["deetly"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
